Add navigation and contact section to landing page

--- a/landingpage.html
+++ b/landingpage.html
@@ -37,6 +37,13 @@
 <body>
     <header>
         <h1>Your Landing Page</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
         <p>Welcome to our website!</p>
     </header>
     <main>
