--- a/landingpage.html
+++ b/landingpage.html
@@ -36,21 +36,18 @@
 </head>
 <body>
     <header>
-        <h1>Your Landing Page</h1>
+        <h1>Kanban Flow Clone</h1>
         <p>Welcome to our website!</p>
     </header>
     <main>
         <section>
-            <h2>About Us</h2>
+            <h2>About The Project</h2>
+            <p>This is a CIS 4193 project.</p>
         </section>
-        <section>
-            <h2>Features</h2>
-            <ul>
-                <li>Feature 1</li>
-                <li>Feature 2</li>
-                <li>Feature 3</li>
-            </ul>
-        </section>
+        <!-- <section>
+            <h1>Login</h1>
+            <button type="button">Login</button>
+        </section> -->
     </main>
 </body>
 </html>
