change to title

--- a/landingpage.html
+++ b/landingpage.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Landing Page</h1>
+        <h1>Kanban Flow Clone</h1>
         <p>Welcome to our website!</p>
     </header>
     <main>
